lintian (2.5.14) UNRELEASED; urgency=low

  * checks/cruft:
    + [NT] Revise a few tests that relied on file(1) on text files.
  * checks/fields.desc:
    + [NT] Fix typo, thanks to Adrien Cunin.

  * coll/*:
    + [NT] Set "Auto-Remove: yes" on several collections to
      reduce the "inode pressure" on lintian.d.o.
  * coll/debfiles:
    + [NT] Remove test of the presence of unpacked.
  * coll/hardening-info:
    + [NT] Skip files in usr/lib/debug/.

  * lib/Lintian/{Path,Util}.pm:
    + [NT] Remove deprecated methods.

  * reporting/harness:
    + [NT] Fix bug where harness might schedule the same group
      multiple times.  (Closes: #710380)

 -- Niels Thykier <niels@thykier.net>  Thu, 30 May 2013 10:38:26 +0200

lintian (2.5.13) unstable; urgency=low

  Upload to unstable.

  * Summary of tag changes:
    + Added:
      - conffile-is-not-in-package
      - debconf-translation-using-general-list
      - dh_pysupport-is-obsolete
      - init.d-script-call-internal-API
    + Removed:
      - debhelper-maintscript-needs-versioned-build-depends
      - debhelper-script-needs-versioned-build-depends
      - missing-pre-dependency-on-multiarch-support

  * checks/*:
    + [NT] Use Lintian::Path objects as arguments to unpacked
      and control where these objects are available.
  * checks/binaries:
    + [RA] Do not complain about kernel modules with no shared
      library dependency information.  Patch from Guillem Jover.
      (Closes: #706242)
    + [NT] Demote the certainty of hardening-no-fortify-functions
      to "wild-guess".  (Closes: #709415)
  * checks/changes:
    + [NT] Recognise "<dist>-backports-sloppy" as a valid
      distribution.  Thanks to Romain Francoise for the
      report and the patch.  (Closes: #705170)
  * checks/conffiles:
    + [NT] Strip whitespace from conffiles similar to how dpkg
      does it.
    + [NT] When emitting duplicate-conffile, avoid repeating
      other tags related to that conffile.  The exception to