@@ -2,6 +2,6 @@ Collector-Script: file-info
 Author: Richard Braakman <dark@xs4all.nl>
 Info: This script runs the file(1) command over all files of any kind of package.
 Type: binary, udeb, source
-Version: 2
+Version: 3
 Needs-Info: unpacked, index
 Interface: perl-coll
